Structure native-image configuration into Features